<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/p1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1" >

        <ImageView
            android:id="@+id/p1_pic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/neuron" />

        <TextView
            android:id="@+id/p1_ques"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/p1_question"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/p1_ans"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text"
            android:inputType="textNoSuggestions" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Check" />

            <Button
                android:id="@+id/nextp1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Next" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>